Bug 363214 grabFocus to document frame doesn't remove focus from text entry patch by Nian.Liu at sun.com r=aaronleventhal