accessible/src/base/nsDocAccessible.h
@@ -80,6 +80,7 @@ class nsDocAccessible : public nsHyperTextAccessible,
     NS_IMETHOD GetState(PRUint32 *aState);
     NS_IMETHOD GetFocusedChild(nsIAccessible **aFocusedChild);
     NS_IMETHOD GetParent(nsIAccessible **aParent);
+    NS_IMETHOD TakeFocus(void);
 
     // ----- nsIScrollPositionListener ---------------------------
     NS_IMETHOD ScrollPositionWillChange(nsIScrollableView *aView, nscoord aX, nscoord aY);
